--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title> Instagram </title>
 </head>
 <body>
-    <div class="instagram-wrapper"> </div>
+    <div class="instagram-wrapper"> 
+    <div class="instagram-phone">
+        
+    </div>
+    <div class="instagram-continue">
+        
+    </div>
+</div>
 </body>
 
 
