--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <img src="foto1.png" alt="celular">
     </div>
     <div class="instagram-continue">
-      
+        <div class="group">
+            <img src="logo.png" class="instagram-logo" alt="logo">
+        </div>
     </div>
 </div>
 </body>
