--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="instagram-continue">
         <div class="group">
             <img src="logo.png" class="instagram-logo" alt="logo">
+        <div class="profile-photo">
+            <img src="perfil.png" alt="foto de perfil">
+        </div>
         </div>
     </div>
 </div>
